--- a/src/main/scala/com/spark_project/video.html
+++ b/src/main/scala/com/spark_project/video.html
@@ -277,7 +277,7 @@ echarts.min.js https://pan.baidu.com/s/1sm956qT
 6. 编写 web.xml
 <servlet>
     <servlet-name>stat</servlet-name>
-    <servlet-class>com.spark.web.VideoAccessTopNServlet</servlet-class>
+    <servlet-class>com.spark_sql.web.VideoAccessTopNServlet</servlet-class>
 </servlet>
 
 <servlet-mapping>
