--- a/src/idea.html
+++ b/src/idea.html
@@ -15,3 +15,7 @@ idea 的相关操作
 打开Maven Projects窗口
 Help ---> Find Action ---> 搜索 Maven ---> 选中 Maven Project
 View ---> Tool Window ---> Maven Project
+
+右边显示树形目录结构
+File ---> Project Structure ---> Module ---> Import Module ---> import module from external module
+---> Maven ---> 下一步 --> finished
