--- a/src/main/scala/com/stream_kafka/flow.html
+++ b/src/main/scala/com/stream_kafka/flow.html
@@ -1,8 +1,10 @@
 Spark Streaming 整合 kafka 方式之一 之 Receiver整合
 1. 启动zk
+cd $ZK_HOME
 bin/zkServer.sh start
 
 2. 启动kafka
+cd $KAFKA_HOME
 bin/kafka-server-start.sh
 
 2. 启动kafka
