--- a/src/idea.html
+++ b/src/idea.html
@@ -19,3 +19,7 @@ View ---> Tool Window ---> Maven Project
 右边显示树形目录结构
 File ---> Project Structure ---> Module ---> Import Module ---> import module from external module
 ---> Maven ---> 下一步 --> finished
+
+idea 运行java ---> Edit Configuration ---> Application ---> 选择 Main class ---> src ---> 对应的类
+
+idea 运行junit ---> Edit Configuration ---> Junit ---> + 添加需要运行的方法 ---> 选择 Main class ---> src ---> 选择对应的类
