--- a/src/main/scala/com/spark_project/flow.html
+++ b/src/main/scala/com/spark_project/flow.html
@@ -5,7 +5,7 @@ ricky@ricky:~/data$ cp /media/ricky/资料/spark/data/access.20161111.log.gz .
 ricky@ricky:~/data$ zcat access.20161111.log.gz > access.20161111.log
 head -10000 access.20161111.log >> 10000_access.log
 
-2. 清洗日志文件
+2. 清洗日志文件 (初始清洗)
 运行 SparkStatFormatJob
 
 3. 查看清洗后的文件
