--- a/src/main/scala/com/stream_flume/flow.html
+++ b/src/main/scala/com/stream_flume/flow.html
@@ -24,7 +24,7 @@ simple-agent.sinks.avro-sink.channel = memory-channel
 知识点
 sublime 列选择(鼠标右键 + shift)
 
-2. 编写代码 FlumePullWordCount
+2. 编写代码 FlumePushWordCount
 
 3. 运行代码
 
