--- a/src/main/scala/com/stream_project/flow.html
+++ b/src/main/scala/com/stream_project/flow.html
@@ -28,3 +28,6 @@ spark-submit --master local[2] \
 --packages org.apache.spark:spark-streaming-kafka-0-8_2.11:2.2.0 \
 /home/ricky/spark-jar/spark-learn-1.0.jar \
 ricky:2181 test streamingtopic 1
+
+see resolution messages for details
+将 repository下的jar包复制到 .m2/repository中
