--- a/src/main/scala/com/spark_basic/hadoop.html
+++ b/src/main/scala/com/spark_basic/hadoop.html
@@ -54,7 +54,7 @@ ricky
 
 bin/hdfs namenode -format
 
-6. 启动dfs
+6. 启动dfs (删除所有 *.cmd ---> cd bin ---> rm -rf *.cmd)
 sbin/start-dfs.sh
 
 7. 检测是否成功
