--- a/src/main/scala/com/spark_basic/hbase.html
+++ b/src/main/scala/com/spark_basic/hbase.html
@@ -42,7 +42,7 @@ ricky
 cd $ZK_HOME
 bin/zkServer.sh start
 
-6. 启动 hbase
+6. 启动 hbase (删除所有 *.cmd ---> cd bin ---> rm -rf *.cmd)
 cd $HBASE_HOME
 bin/start-hbase.sh
 
