--- a/src/main/scala/com/spark_basic/maven.html
+++ b/src/main/scala/com/spark_basic/maven.html
@@ -27,5 +27,6 @@ http://mvnrepository.com/
     <version></version>
 </dependency>
 
+(删除所有 *.cmd ---> cd bin ---> rm -rf *.cmd)
 6. 检测是否安装成功
 mvn -v
