--- a/src/main/scala/com/spark_basic/zk.html
+++ b/src/main/scala/com/spark_basic/zk.html
@@ -18,7 +18,7 @@ cp zoo_sample.cfg zoo.cfg
 vi zoo.cfg
 dataDir=/home/ricky/app/tmp/zk
 
-5. 启动
+5. 启动 (删除所有 *.cmd ---> cd bin ---> rm -rf *.cmd)
 cd $ZK_HOME
 bin/zkServer.sh start
 
