--- a/src/main/scala/scala/basic/intro.html
+++ b/src/main/scala/scala/basic/intro.html
@@ -1,3 +1,10 @@
+scala 多范式的编程语言 集成面向对象编程和函数式编程的各种特性
+scala 运行于java平台(java虚拟机 --> jvm) 并兼容现有的java程序
+
+特性
+1. 优雅
+2. 速度快　开发速度快 静态编译
+3. 能融合到Hadoop生态圉　Hadoop现在是大数据事实标准 spark并不是要取代Hadoop 而是要完善Hadoop生态
 scala 的安装
 
 1. 下载scala
