--- a/src/main/scala/scala/basic/intro.html
+++ b/src/main/scala/scala/basic/intro.html
@@ -24,3 +24,10 @@ scala
 
 5. 删除无用命令
 删除所有 *.bat ---> cd bin ---> rm -rf *.bat
+
+object HelloScala {
+    def main(args: Array[String]) {
+        println("welcome")
+    }
+}
+编译 scalac HelloScala.scala
