--- a/src/main/scala/scala/basic/intro.html
+++ b/src/main/scala/scala/basic/intro.html
@@ -1,6 +1,11 @@
 scala 多范式的编程语言 集成面向对象编程和函数式编程的各种特性
 scala 运行于java平台(java虚拟机 --> jvm) 并兼容现有的java程序
 
+scala是一门以java虚拟机为目标运行环境并将面向对象和函数式编程语言的最佳特性结合在一起的编程语言　
+使用scala可编写出更加精简优雅的程序
+scala的并发非常强大
+scala可以访问任何java类库
+
 特性
 1. 优雅
 2. 速度快　开发速度快 静态编译
