--- a/src/main/scala/spark/basic/scala.html
+++ b/src/main/scala/spark/basic/scala.html
@@ -1,8 +1,8 @@
 scala 的安装
 
 1. 下载scala
-http://www.scala-lang.org/download/2.11.8.html
-百度云下载 https://pan.baidu.com/s/1o92QyHs
+[官网下载](http://www.scala-lang.org/download/2.11.8.html)s
+[百度云下载](https://pan.baidu.com/s/1o92QyHs)
 
 2. 解压安装scala
 tar -zxvf scala-2.11.8.tgz -C ~/app/
