--- a/src/main/scala/spark/basic/maven.html
+++ b/src/main/scala/spark/basic/maven.html
@@ -1,8 +1,8 @@
 maven 安装
 
 1. 下载
-maven.apache.org/download.cgi
-百度云下载 https://pan.baidu.com/s/1dFRUkYd
+[官网下载](maven.apache.org/download.cgi)
+[百度云下载](https://pan.baidu.com/s/1dFRUkYd)
 
 2. 解压安装
 tar -zxvf apache-maven-3.3.9-bin.tar.gz -C ~/app/
