--- a/src/main/scala/spark/basic/basic.html
+++ b/src/main/scala/spark/basic/basic.html
@@ -54,15 +54,16 @@ spark shell中已经默认将SparkContext类初始化为对象sc 用户代码如
 1. 首先启动hdfs
 2. 向hdfs上传一个文件到hdfs://ricky:9000/words.txt
 3. 在spark-shell中用scala语言编写spark程序
-sc.textFile("hdfs://ricky:9200/words.txt").flatMap(_.split(" ")).map((_, 1)).reduceByKey(_+_).saveAsTextFile("hdfs://ricky:9200/our")
+sc.textFile("hdfs://ricky:9000/words.txt").flatMap(_.split(" ")).map((_, 1)).reduceByKey(_+_)
+.saveAsTextFile("hdfs://ricky:9000/our")
 4. 使用hdfs命令查看结果
-hadoop fs -ls /out/part* (hdfs dfs -ls hdfs://ricky:9200/out/part*)
+hadoop fs -ls /out/part* (hdfs dfs -ls hdfs://ricky:9000/out/part*)
 sc 是SparkContext对象　该对象是提交spark程序的入口 (spark1.6)
-textFile(hdfs://ricky:9200/words.txt) 从hdfs中读取数据
+textFile(hdfs://ricky:9000/words.txt) 从hdfs中读取数据
 flatMap(_.split(" ")) 先map再压平
 map((_, 1)) 将单词和1构成元组
 reduceByKey(_+_)按照key进行reduce　并将value累加
-saveAsTextFile("hdfs://ricky:9200/out") 将结果写入到hdfs中
+saveAsTextFile("hdfs://ricky:9000/out") 将结果写入到hdfs中
 
 
 安装 spark
