--- a/src/main/scala/spark/sql/intro.html
+++ b/src/main/scala/spark/sql/intro.html
@@ -12,6 +12,12 @@ Spark SQL是Spark用来处理结构化数据的一个模块，它提供了一个
 与Hive类似，DataFrame也支持嵌套数据类型（struct、array和map）。从API易用性的角度上 看，DataFrame API提供的是一套高层的关系操作，
 比函数式的RDD API要更加友好，门槛更低。由于与R和Pandas的DataFrame类似，Spark DataFrame很好地继承了传统单机数据分析的开发体验。
 
+在spark中　DataFrame是一种以RDD为基础的分布式数据集　类似于传统数据库中的二维表格
+DataFrame与RDD的主要区别在于　前者带有schema元信息　即DataFrame所表示的二维表数据集的每一列都带有名称和类型
+这使得spark SQL得以洞察更多的结构信息　从而对于藏于DataFrame之上的变换进行了针对性的优化
+最终达到大幅提升运行时效率的目标　反观RDD 由于无从得知所存数据元素的具体内部结构
+spark Core只能在stage层面进行简单　通用的流水线优化
+
 二 创建DataFrames
 在Spark SQL中SQLContext是创建DataFrames和执行SQL的入口，在spark-1.5.2中已经内置了一个sqlContext
 
@@ -80,8 +86,46 @@ sqlContext.sql("desc t_person").show
 Spark SQL可以通过JDBC从关系型数据库中读取数据的方式创建DataFrame，通过对DataFrame一系列的计算后，还可以将数据再写回关系型数据库中。
 4.1.1.从MySQL中加载数据（Spark Shell方式）
 1.启动Spark Shell，必须指定mysql连接驱动jar包
-/usr/local/spark-1.5.2-bin-hadoop2.6/bin/spark-shell \
---master spark://node1.itcast.cn:7077 \
---jars /usr/local/spark-1.5.2-bin-hadoop2.6/mysql-connector-java-5.1.35-bin.jar \
---driver-class-path /usr/local/spark-1.5.2-bin-hadoop2.6/mysql-connector-java-5.1.35-bin.jar
+spark-shell \
+--master spark://ricky:7077 \
+--jars /home/ricky/software/mysql-connector-java-5.1.27-bin.jar \
+--driver-class-path /home/ricky/software/mysql-connector-java-5.1.27-bin.jar
 2.从mysql中加载数据
+
+
+
+//1.读取数据，将每一行的数据使用列分隔符分割
+val lineRDD = sc.textFile("hdfs://ricky:9000/person.txt", 1).map(_.split(" "))
+
+//2.定义case class（相当于表的schema）
+case class Person(id:Int, name:String, age:Int)
+
+//3.导入隐式转换,在当前版本中可以不用导入
+import sqlContext.implicits._
+
+//4.将lineRDD转换成personRDD
+val personRDD = lineRDD.map(x => Person(x(0).toInt, x(1), x(2).toInt))
+
+//5.将personRDD转换成DataFrame
+val personDF = personRDD.toDF
+
+6.对personDF进行处理
+
+
+#(SQL风格语法)
+personDF.registerTempTable("t_person")
+sqlContext.sql("select * from t_person order by age desc limit 2").show
+sqlContext.sql("desc t_person").show
+val result = sqlContext.sql("select * from t_person order by age desc")
+
+7.保存结果
+result.save("hdfs://ricky:9000/sql/res1")
+result.save("hdfs://ricky:9000/sql/res2", "json")
+
+#以JSON文件格式覆写HDFS上的JSON文件
+import org.apache.spark.sql.SaveMode._
+result.save("hdfs://ricky:9000/sql/res2", "json" , Overwrite)
+
+8.重新加载以前的处理结果（可选）
+sqlContext.load("hdfs://ricky:9000/sql/res1")
+sqlContext.load("hdfs://ricky:9000/sql/res2", "json")
