--- a/src/main/scala/hive/install.html
+++ b/src/main/scala/hive/install.html
@@ -12,13 +12,26 @@ export HIVE_HOME=/home/ricky/app/hive-1.1.0-cdh5.7.0
 export PATH=$PATH:$HIVE_HOME/bin
 source .bashrc
 
+安装mysql
+安装mysql数据库（切换到root用户）（装在哪里没有限制，只有能联通hadoop集群的节点）
+mysql安装仅供参考，不同版本mysql有各自的安装流程
+rpm -qa | grep mysql
+rpm -e mysql-libs-5.1.66-2.el6_3.i686 --nodeps
+rpm -ivh MySQL-server-5.1.73-1.glibc23.i386.rpm
+rpm -ivh MySQL-client-5.1.73-1.glibc23.i386.rpm
+修改mysql的密码
+/usr/bin/mysql_secure_installation
+（注意：删除匿名用户，允许用户远程连接）
+登陆mysql
+mysql -u root -p
+
 4. 配置文件
 cd $HIVE_HOME/conf
 cp hive-env.sh.template hive-env.sh
 vi hive-env.sh
 HADOOP_HOME=/home/ricky/app/hadoop-2.6.0-cdh5.7.0
 
-vi hive-site.xml
+vi hive-site.xml (配置元数据库信息)
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
 <configuration>
@@ -52,6 +65,16 @@ vi hive-site.xml
 
 5. 复制mysql驱动包
 cp /home/ricky/software/mysql-connector-java-5.1.27-bin.jar lib/
+
+5.安装hive和mysq完成后，将mysql的连接jar包拷贝到$HIVE_HOME/lib目录下
+如果出现没有权限的问题，在mysql授权(在安装mysql的机器上执行)
+mysql -uroot -p
+#(执行下面的语句  *.*:所有库下的所有表   %：任何IP地址或主机都可以连接)
+GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY 'root' WITH GRANT OPTION;
+FLUSH PRIVILEGES;
+
+6. Jline包版本不一致的问题，需要拷贝hive的lib目录中jline.2.12.jar的jar包替换掉hadoop中的
+/home/hadoop/app/hadoop-2.6.4/share/hadoop/yarn/lib/jline-0.9.94.jar
 
 hive 官网 hive.apache.org
 
@@ -200,11 +223,31 @@ create table t_person (
 id int,
 name string,
 like array<string>,
-    tedian map<string,string>
-    )
-    ROW FORMAT DELIMITED
-    FIELDS TERMINATED BY ','
-    COLLECTION ITEMS TERMINATED BY '_'
-    MAP KEYS TERMINATED BY ':';
+tedian map<string,string>
+)
+ROW FORMAT DELIMITED
+FIELDS TERMINATED BY ','
+COLLECTION ITEMS TERMINATED BY '_'
+MAP KEYS TERMINATED BY ':';
 
-    1,zhangsan,sports_books_tv,sex:男_color:red
+1,zhangsan,sports_books_tv,sex:男_color:red
+
+
+6.建表(默认是内部表)
+create table trade_detail(id bigint, account string, income double, expenses double, time string) row format delimited fields terminated by '\t';
+建分区表
+create table td_part(id bigint, account string, income double, expenses double, time string) partitioned by (logdate string) row format delimited fields terminated by '\t';
+建外部表
+create external table td_ext(id bigint, account string, income double, expenses double, time string) row format delimited fields terminated by '\t' location '/td_ext';
+
+7.创建分区表
+普通表和分区表区别：有大量数据增加的需要建分区表
+create table book (id bigint, name string) partitioned by (pubdate string) row format delimited fields terminated by '\t';
+
+分区表加载数据
+load data local inpath './book.txt' overwrite into table book partition (pubdate='2010-08-22');
+
+load data local inpath '/root/data.am' into table beauty partition (nation="USA");
+
+
+select nation, avg(size) from beauties group by nation order by avg(size);
