--- a/src/idea.html
+++ b/src/idea.html
@@ -23,3 +23,6 @@ File ---> Project Structure ---> Module ---> Import Module ---> import module fr
 idea 运行java ---> Edit Configuration ---> Application ---> 选择 Main class ---> src ---> 对应的类
 
 idea 运行junit ---> Edit Configuration ---> Junit ---> + 添加需要运行的方法 ---> 选择 Main class ---> src ---> 选择对应的类
+
+
+idea相关进程 Main Launcher RemoteMavenServer
